--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div>
               <h4 class="my-work-experience-position">
                  Експерт з обслуговування 
-                <a  class="my-work-experience-company" href="https://www.vodafone.ua/">ПрАТ "ВФ Україна"</a>
+                <a  class="my-work-experience-company" href="https://www.vodafone.ua/">ПрАТ "ВФ - Україна"</a>
                 <!-- <span class="my-work-experience-company">Vodafone</span> -->
               </h4>
               <p class="my-work-experience-period">
