--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
             <a class="my-education-universitiy" >
               Водійське посвідчення 
             </a>
-            <h4 class="my-education-specialty">категорії «В»</h4>
-            <p class="my-education-period">
+            <h4 class="my-education-specialty">Категорії «В»</h4>
+           <!-- <p class="my-education-period">
               Липень 2008 
-            </p>
+            </p>-->
             </div>
         </section>
       </section>
