--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                 Обов'язки: Консультації з придбання мобільних телефонів, планшетів, стартових пакетів і консультація по механіки тарифів ПрАТ «Київстар»
               </li>
               <li class="my-work-experience-duty">
-                налаштування ПО Android / IOS / Windows.
+                Налаштування ПО Android / IOS / Windows.
               </li>
               <li class="my-work-experience-duty">
-                ведення первинної бухгалтерської документації в «1С», проведення інвентаризації.
+                Ведення первинної бухгалтерської документації в «1С», проведення інвентаризації.
               </li>
             </ul>
           </div>
