--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
               </li>
               
               <li class="contacts__social--icon">
-                 <a href="mailto:MefikJiS21@gmail.com" class="contacts-sections-link">
+                 <a href="mailto:smaltsev@vodafone.ua" class="contacts-sections-link">
                   <svg  width="20" height="20">
-                   <use href="./img/icon.svg#icon-gmail"></use>
+                   <use href="./img/icon.svg#icon-outlook"></use>
                  </svg>
-                 MefikJiS21@gmail.com
+                 smaltsev@vodafone.ua
                  </a>
               </li> 
               <li class="contacts__social--icon">
